--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "lite-server": "^2.6.1",
     "sass": "^1.85.1"
   },
-  "description": "",
   "dependencies": {
     "bootstrap": "^5.3.3"
-  }
+  },
+  "description": ""
 }
